[tool.poetry]
name = "nika_site"
version = "0.1.0"
description = "Nika's personal blog"
authors = ["Nika Layzell <nika@thelayzells.com>"]

[tool.poetry.scripts]
server = "nika_site:server"
publish = "nika_site:publish"
generate = "nika_site:generate"

[tool.poetry.dependencies]
python = "^3.6"
pelican = "^4.0"
markdown = "^3.0"
ghp-import = "^0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
